--- a/AsosCodingStyle.Web/AsosCodingStyle.Web.csproj
+++ b/AsosCodingStyle.Web/AsosCodingStyle.Web.csproj
@@ -73,10 +73,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="index.html" />
     <Content Include="Scripts\app\app.html" />
     <Content Include="Scripts\app\app.js" />
+    <Content Include="Scripts\libs\bootstrap.js" />
     <Content Include="Scripts\libs\jquery.js" />
     <Content Include="Scripts\libs\knockout-latest.debug.js" />
     <Content Include="Scripts\libs\require.js" />
@@ -84,6 +86,8 @@
     <Content Include="Scripts\require.config.js" />
     <Content Include="Scripts\setup\components.js" />
     <Content Include="Scripts\startup.js" />
+    <Content Include="Styles\bootstrap-theme.css" />
+    <Content Include="Styles\bootstrap.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -96,6 +100,10 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="Scripts\setup\componentConfiguration.json" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
