--- a/AsosCodingStyle.Web/Web.config
+++ b/AsosCodingStyle.Web/Web.config
@@ -10,6 +10,12 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
+    <staticContent>
+      <remove fileExtension=".json"/>
+      <mimeMap fileExtension=".json" mimeType="application/json"/>
+      <remove fileExtension=".svg"/>
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml"/>
+    </staticContent>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
