--- a/AsosCodingStyle.JsUnitTests/AsosCodingStyle.JsUnitTests.csproj
+++ b/AsosCodingStyle.JsUnitTests/AsosCodingStyle.JsUnitTests.csproj
@@ -56,6 +56,7 @@
     <Content Include="specList.js" />
     <Content Include="SpecRunner.html" />
     <TypeScriptCompile Include="specs\components\testApp\testApp.specs.ts" />
+    <TypeScriptCompile Include="typedefinitions\es6-promise.d.ts" />
     <TypeScriptCompile Include="typedefinitions\lodash.d.ts" />
     <TypeScriptCompile Include="typedefinitions\templates.d.ts" />
   </ItemGroup>
