Order API mocking

--- a/AsosCodingStyle.Data.Scraper/AsosCodingStyle.Data.Scraper.csproj
+++ b/AsosCodingStyle.Data.Scraper/AsosCodingStyle.Data.Scraper.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data.html" />
+    <Content Include="Order.txt" />
     <Content Include="Product.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
