--- a/AsosCodingStyle.Data/AsosCodingStyle.Data.csproj
+++ b/AsosCodingStyle.Data/AsosCodingStyle.Data.csproj
@@ -52,8 +52,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OrderItemFeedbackType.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderItem.cs" />
+    <Compile Include="OrderItemFeedback.cs" />
+    <Compile Include="OrderItemReturn.cs" />
+    <Compile Include="ReturnReasonType.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
