--- a/AsosCodingStyle.WebApi/AsosCodingStyle.WebApi.csproj
+++ b/AsosCodingStyle.WebApi/AsosCodingStyle.WebApi.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -102,8 +103,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AsosCodingStyle.Data\AsosCodingStyle.Data.csproj">
+      <Project>{33dbc4b9-c7a7-4e4e-bd31-71c1cfa87d7b}</Project>
+      <Name>AsosCodingStyle.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
