Fix typescript release build and checkin some other code... client side not fully working yet

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,9 @@ _Pvt_Extensions
 /AsosCodingStyle.JsUnitTests/specs/components/testApp/testApp.specs.js
 /AsosCodingStyle.Data/Scripts/Enums.js.map
 /AsosCodingStyle.Data/Scripts/Enums.js
+/AsosCodingStyle.Web/Scripts/models/orderModel.js.map
+/AsosCodingStyle.Web/Scripts/models/orderModel.js
+/AsosCodingStyle.Web/Scripts/components/orderItem/orderItem.js.map
+/AsosCodingStyle.Web/Scripts/components/orderItem/orderItem.js
+/AsosCodingStyle.Web/Scripts/components/order/order.js.map
+/AsosCodingStyle.Web/Scripts/components/order/order.js
