Some more client side dev

--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,5 @@ _Pvt_Extensions
 /AsosCodingStyle.Web/Scripts/components/orderItem/orderItem.js
 /AsosCodingStyle.Web/Scripts/components/order/order.js.map
 /AsosCodingStyle.Web/Scripts/components/order/order.js
+/AsosCodingStyle.Web/Scripts/models/reasonsModel.js.map
+/AsosCodingStyle.Web/Scripts/models/reasonsModel.js
