--- a/AsosCodingStyle.Web/Web.config
+++ b/AsosCodingStyle.Web/Web.config
@@ -23,6 +23,10 @@
       <mimeMap fileExtension=".json" mimeType="application/json" />
       <remove fileExtension=".svg" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
     </staticContent>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
