Check in the skeleton of the returns methods stuff... to flesh out. Also make return items number respect plural/single

--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,9 @@ _Pvt_Extensions
 /AsosCodingStyle.Web/Scripts/components/order/order.js
 /AsosCodingStyle.Web/Scripts/models/reasonsModel.js.map
 /AsosCodingStyle.Web/Scripts/models/reasonsModel.js
+/AsosCodingStyle.Web/Scripts/components/returnsMethod/returnsMethod.js.map
+/AsosCodingStyle.Web/Scripts/components/returnsMethod/returnsMethod.js
+/AsosCodingStyle.Web/Scripts/components/dropOffPoint/dropOffPoint.js.map
+/AsosCodingStyle.Web/Scripts/components/dropOffPoint/dropOffPoint.js
+/AsosCodingStyle.Web/Scripts/components/collection/collection.js.map
+/AsosCodingStyle.Web/Scripts/components/collection/collection.js
