--- a/AsosCodingStyle.Web/AsosCodingStyle.Web.csproj
+++ b/AsosCodingStyle.Web/AsosCodingStyle.Web.csproj
@@ -89,12 +89,18 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="index.html" />
+    <Content Include="Scripts\components\collection\collection.html" />
+    <Content Include="Scripts\components\dropOffPoint\dropOffPoint.html" />
+    <Content Include="Scripts\components\returnsMethod\returnsMethod.html" />
     <Content Include="Scripts\components\orderItem\orderItem.html" />
     <Content Include="Scripts\components\order\order.html" />
     <Content Include="Scripts\components\testShowEmployees\testShowEmployees.html" />
     <Content Include="Scripts\components\testAddEmployee\testAddEmployee.html" />
     <Content Include="Scripts\components\testApp\testApp.html" />
     <TypeScriptCompile Include="Scripts\apis\testApi.ts" />
+    <TypeScriptCompile Include="Scripts\components\collection\collection.ts" />
+    <TypeScriptCompile Include="Scripts\components\dropOffPoint\dropOffPoint.ts" />
+    <TypeScriptCompile Include="Scripts\components\returnsMethod\returnsMethod.ts" />
     <TypeScriptCompile Include="Scripts\components\orderItem\orderItem.ts" />
     <TypeScriptCompile Include="Scripts\components\order\order.ts" />
     <TypeScriptCompile Include="Scripts\components\testShowEmployees\testShowEmployees.ts" />
