Added drop-off point component

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,5 @@ _Pvt_Extensions
 /AsosCodingStyle.Web/Scripts/components/dropOffPoint/dropOffPoint.js
 /AsosCodingStyle.Web/Scripts/components/collection/collection.js.map
 /AsosCodingStyle.Web/Scripts/components/collection/collection.js
+/AsosCodingStyle.Web/Scripts/apis/dropOffPointApi.js.map
+/AsosCodingStyle.Web/Scripts/apis/dropOffPointApi.js
