Finish logic of collection component and fix some issues with orderitem and returnsmethod

--- a/.gitignore
+++ b/.gitignore
@@ -275,3 +275,5 @@ _Pvt_Extensions
 /AsosCodingStyle.Web/Scripts/components/collection/collection.js
 /AsosCodingStyle.Web/Scripts/apis/dropOffPointApi.js.map
 /AsosCodingStyle.Web/Scripts/apis/dropOffPointApi.js
+/AsosCodingStyle.Web/Scripts/apis/orderApi.js.map
+/AsosCodingStyle.Web/Scripts/apis/orderApi.js
