--- a/AsosCodingStyle.JsUnitTests/AsosCodingStyle.JsUnitTests.csproj
+++ b/AsosCodingStyle.JsUnitTests/AsosCodingStyle.JsUnitTests.csproj
@@ -68,6 +68,9 @@
     <TypeScriptCompile Include="typedefinitions\require.d.ts" />
     <TypeScriptCompile Include="typedefinitions\squirejs.d.ts" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
