--- a/AsosCodingStyle.Web/Scripts/setup/componentConfiguration.json
+++ b/AsosCodingStyle.Web/Scripts/setup/componentConfiguration.json
@@ -52,5 +52,17 @@
     "config": {
       "require": "components/dropOffPoint/dropOffPoint"
     }
+  },
+  {
+    "componentName": "packingDetails",
+    "config": {
+      "require": "components/packingDetails/packingDetails"
+    }
+  },
+  {
+    "componentName": "submitComplete",
+    "config": {
+      "require": "components/submitComplete/submitComplete"
+    }
   }
 ]
