Styling updates (and some refactors)

--- a/.gitignore
+++ b/.gitignore
@@ -285,3 +285,5 @@ _Pvt_Extensions
 /AsosCodingStyle.Web/Scripts/components/submitComplete/submitComplete.js
 /AsosCodingStyle.Web/Scripts/components/packingDetails/packingDetails.js.map
 /AsosCodingStyle.Web/Scripts/components/packingDetails/packingDetails.js
+/AsosCodingStyle.Web/Scripts/components/orderItems/orderItems.js.map
+/AsosCodingStyle.Web/Scripts/components/orderItems/orderItems.js
