--- a/AsosCodingStyle.Web/AsosCodingStyle.Web.csproj
+++ b/AsosCodingStyle.Web/AsosCodingStyle.Web.csproj
@@ -167,6 +167,7 @@
     <Content Include="index.html" />
     <Content Include="Scripts\components\collection\collection.html" />
     <Content Include="Scripts\components\dropOffPoint\dropOffPoint.html" />
+    <Content Include="Scripts\components\orderItems\orderItems.html" />
     <Content Include="Scripts\components\submitComplete\submitComplete.html" />
     <Content Include="Scripts\components\packingDetails\packingDetails.html" />
     <Content Include="Scripts\components\returnsMethod\returnsMethod.html" />
@@ -180,6 +181,7 @@
     <TypeScriptCompile Include="Scripts\apis\testApi.ts" />
     <TypeScriptCompile Include="Scripts\components\collection\collection.ts" />
     <TypeScriptCompile Include="Scripts\components\dropOffPoint\dropOffPoint.ts" />
+    <TypeScriptCompile Include="Scripts\components\orderItems\orderItems.ts" />
     <TypeScriptCompile Include="Scripts\components\submitComplete\submitComplete.ts" />
     <TypeScriptCompile Include="Scripts\components\packingDetails\packingDetails.ts" />
     <TypeScriptCompile Include="Scripts\components\returnsMethod\returnsMethod.ts" />
