--- a/AsosCodingStyle.Web/AsosCodingStyle.Web.csproj
+++ b/AsosCodingStyle.Web/AsosCodingStyle.Web.csproj
@@ -167,6 +167,7 @@
     <Content Include="index.html" />
     <Content Include="Scripts\components\collection\collection.html" />
     <Content Include="Scripts\components\dropOffPoint\dropOffPoint.html" />
+    <Content Include="Scripts\components\notifications\notifications.html" />
     <Content Include="Scripts\components\returnsMethod\returnsMethod.html" />
     <Content Include="Scripts\components\orderItem\orderItem.html" />
     <Content Include="Scripts\components\order\order.html" />
@@ -178,6 +179,7 @@
     <TypeScriptCompile Include="Scripts\apis\testApi.ts" />
     <TypeScriptCompile Include="Scripts\components\collection\collection.ts" />
     <TypeScriptCompile Include="Scripts\components\dropOffPoint\dropOffPoint.ts" />
+    <TypeScriptCompile Include="Scripts\components\notifications\notifications.ts" />
     <TypeScriptCompile Include="Scripts\components\returnsMethod\returnsMethod.ts" />
     <TypeScriptCompile Include="Scripts\components\orderItem\orderItem.ts" />
     <TypeScriptCompile Include="Scripts\components\order\order.ts" />
