--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,5 @@ _Pvt_Extensions
 /AsosCodingStyle.Web/Scripts/components/packingDetails/packingDetails.js
 /AsosCodingStyle.Web/Scripts/components/orderItems/orderItems.js.map
 /AsosCodingStyle.Web/Scripts/components/orderItems/orderItems.js
+/AsosCodingStyle.Web/Scripts/components/notifications/notifications.js.map
+/AsosCodingStyle.Web/Scripts/components/notifications/notifications.js
