--- a/AsosCodingStyle.Web/Web.config
+++ b/AsosCodingStyle.Web/Web.config
@@ -32,6 +32,8 @@
       <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
       <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <remove fileExtension=".ics" />
+      <mimeMap fileExtension=".ics" mimeType="text/calendar" />
     </staticContent>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
