--- a/asos.codingstyle.android/app/build.gradle
+++ b/asos.codingstyle.android/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-base:6.5.87'
     compile files('libs/notification-hubs-0.3.jar')
     compile 'com.google.android.gms:play-services:7.8.0'
+    compile 'com.android.support:design:23.0.1+'
 }
