--- a/asos.codingstyle.android/app/src/main/AndroidManifest.xml
+++ b/asos.codingstyle.android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.asos.codingstyle.asoscodingstyle" >
 
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -15,6 +18,7 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/main_title"
         android:theme="@style/AppTheme" >
@@ -36,6 +40,19 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".multitracker.MultiTrackerActivity"
+            android:icon="@drawable/icon"
+            android:label="@string/title_activity_scan_barcode" >
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:screenOrientation="fullSensor">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+
         <receiver
             android:name="com.microsoft.windowsazure.notifications.NotificationsBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
@@ -46,10 +63,6 @@
             </intent-filter>
         </receiver>
 
-        <activity
-            android:name=".ScanBarcodeActivity"
-            android:label="@string/title_activity_scan_barcode" >
-        </activity>
     </application>
 
 </manifest>
